--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <span class="link-block">
-                <a href="" target="_blank" class="external-link button is-normal is-rounded is-dark">
+                <a href="https://drive.google.com/file/d/14RT-CssFqhTk3z2kcQXGvEa4O2IdV1aQ/view?usp=sharing" target="_blank" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
                   </span>
